--- a/languages/russian.json
+++ b/languages/russian.json
@@ -30,7 +30,7 @@
     "wishlist": "Необходимо подождать еще %t секунд, прежде чем снова получить список желаемого (%cd секунд задержки)",
     "server_language": "Необходимо подождать еще %t секунд для смены языка по умолчанию для сервера (%cd секунд задержки)",
     "prefix": "Необходимо подождать еще %t секунд, прежде чем снова изменить префикс (%cd секунд задержки)",
-    "watch_help": "Must wait another %t seconds before getting watch help again (%cd second cooldown)"
+    "watch_help": "Необходимо подождать еще %t секунд, прежде чем снова получить справку по команде `watch` (30 секунд задержки)"
   },
 
   "messages": {
@@ -54,7 +54,8 @@
        "             Страна: %s",
        "             Аватар: %s",
        "    Зарегистрирован: %s",
-       "Последнее посещение: %s"
+       "Последнее посещение: %s",
+      "               Level: %s"
     ],
     "library": "Топ 10 игр у %s (Всего %s игр):",
     "removed": "`%s` из `%s` игр в библиотеке у %s' были удалены из стима (Всего %s игр было удалено из стима за все время)",
@@ -74,6 +75,7 @@
       "   steam info                   - показывает информацию про SteamBot'а",
       "   steam stats                  - показывает статистику по SteamBot'у",
       "   steam clean [limit]          - удаляет указанное количество последний сообщений от SteamBot'а",
+      "   steam prefix                 - show prefix for this channel",
       "   steam prefix [server|channel] \"prefix\" - установить префикс для этого сервера или канала",
       "   steam perm help              - показывает информацию по настройке прав",
       "   steam convert [amount] [currency] [currency]  - конвертирует одну валюту в другую по курсу стима",
@@ -97,6 +99,7 @@
       "   steam new                    - Показывает список последних выпущенных игр",
       "   steam specials               - Показывает список игр со скидками",
       "   steam upcoming               - Показывает список игр которые скоро выйдут",
+      "   steam players [game]         - get information about the player count of a game",
       "   steam popular                -Показывает список игр с наибольшим количеством игроков в онлайне",
       "   steam userdata               - Показывает информацию о количестве пользователей онлайн за последние 48 часов",
       "   steam removed [user]         -  Показывает количество удаленных из стима игр в библиотеке указанного пользователя (спасибо @TheAnthonyNL)",
@@ -122,13 +125,13 @@
       "%s"
     ],
     "premium": [
-      "SteamBot premium member rewards:",
-      "  - allowed to use the 'watch' command, which notifies you when a specific game goes on sale",
-      "  - access to the private development channel in our server",
-      "  - more premium features on there way, suggest some!",
+      "SteamBot предлагает премиум пользователям следующие возможности:",
+      "  - доступ к команде 'watch', которая уведомляет о скидке на указанную игру при распродаже",
+      "  - доступ к приватному каналу разработки на нашем сервере",
+      "  - больше премиум возможностей в будущем, предложите несколько!",
       "",
-      "Premium features are features my bot wouldn't be able to handle everyone having access to",
-      "To become a premium member, just pledge at least $1 per month on our patreon:",
+      "В премиум возможности входят особые команды, которые сильнее грузят бота, но зато ежемесячные пожертвования позволяют вести дальнейшую разработку и увеличивать производительность серверов.",
+      "Чтобы стать премиум пользователем, достаточно подписки хотя бы от $1 в месяц на Patreon:",
       "```",
       "https://www.patreon.com/billyoyo"
     ],
@@ -161,21 +164,21 @@
       " Процент: %s"
     ],
     "perm_help": [
-      "Commands For Permissions:  (all commands effect the *current* server or channel)",
-      "    steam perm server|channel get [command]                  - get all the permissions required for this command",
-      "    steam perm server|channel add [command] [permissions]    - add some permissions to this command",
-      "    steam perm server|channel remove [command] [permissions] - remove some permissions for this command",
-      "    steam perm server|channel clear [command]                - remove all the permissions for this command",
+      "Команды с Правами:  (эффект для всех команд будет применен для *текущего* сервера или канала)",
+      "    steam perm server|channel get [command]                  - дает все права необходимые для этой команды",
+      "    steam perm server|channel add [command] [permissions]    - дает некоторые права необходимые для этой команды",
+      "    steam perm server|channel remove [command] [permissions] - убирает некоторые права необходимые для этой команды",
+      "    steam perm server|channel clear [command]                - убирает все права необходимые для этой команды",
       "",
-      "[permissions] is a list seperated by a comma, like this:",
+      "[permissions] - это список прав через запятую, например:",
       "    manage messages, kick members, role|254650759927300096",
-      "where role|254650759927300096 is role|[id], with [id] being the id of a role, use \"steam roleid [role]\" to get a role's id"
+	  "где role|254650759927300096 это role|[id]. Этот идентификатор роли можно узнать используя команду \"steam roleid [role]\" "
     ],
-    "perm_get": "Current permissions for %s in this %s are:\n %s",
-    "perm_empty": "No permissions are set for %s in this %s",
-    "perm_clear": "Cleared all permissions for %s in this %s",
-    "perm_add": "Added the following permissions for %s in this %s:\n %s",
-    "perm_remove": "Removed the following permissions from %s in this %s:\n %s",
+    "perm_get": "Текущие права выполнения команды %s для этого %s:\n %s",
+    "perm_empty": "Никаких прав выполнения команды %s не задано для этого %s",
+    "perm_clear": "Сбросить все права выполнения команды %s для этого %s",
+    "perm_add": "Добавить следующие права выполнения команды %s для этого %s:\n %s",
+    "perm_remove": "Убрать следующие права выполнения команды %s для этого %s:\n %s",
     "achiev_percent": "игроков получили это достижение",
     "invite": "Используйте эту ссылку для приглашения бота на ваш сервер:",
     "me": "Указать ваш ник в стиме на ",
@@ -190,36 +193,36 @@
     "prefix_channel": "Установить префикс канала на %s",
     "prefix_server": "Установить префикс сервера на %s",
 	"time": ["секунд", "секунд", "минут", "минут", "часов", "часов", "дней", "дней", "месяцев", "месяцев", "лет", "лет"],
-    "deal_started": "A deal for %s just started, it is now %s off!",
-    "deal_increased": "The deal for %s just increased, from %s to %s off!",
-    "deal_reduced": "The deal for %s just decreased, from %s to %s off!",
-    "deal_ended": "The deal for %s just ended (was %s off)",
-    "watch_added": "Watcher added, looking for when %s goes on sale for more than %s%% (ID: %s)",
+    "deal_started": "Распродажа для %s уже началась, скидка сейчас - %s!",
+    "deal_increased": "Скидка для %s стала больше, с %s до %s!",
+    "deal_reduced": "Скидка для %s стала меньше, с %s до %s!",
+    "deal_ended": "Распродажа для %s уже закончилась (скидка была %s)",
+    "watch_added": "Отслеживание добавлено, ждем предложений на %s со скидкой в %s%% и более (ID: %s)",
     "watch_help": [
       "Commands For Watchers:",
-      "    steam watch add pm|mention|message [percent] [game]  - add a watcher for a game in this channel (or in your pms)",
-      "    steam watch remove [watcher-id]                      - remove a watcher",
-      "    steam watch get [watcher-id]                         - show some information about a specific watcher of yours",
-      "    steam watch list                                     - list all your watchers",
-      "    steam watch find [game]                              - find the ids of any watchers you have for that game",
-      "    steam watch help                                     - get this page",
+      "    steam watch add pm|mention|message [percent] [game] - добавить отслеживание скидки игры в этот канал (или ЛС)",
+      "    steam watch remove [watcher-id]                     - удалить отслеживание",
+      "    steam watch get [watcher-id]                        - показать отслеживаемые скидки игр по ID отслеживания",
+      "    steam watch list                                    - список всех отслеживаний",
+      "    steam watch find [game]                             - показать ID отслеживаний, которые следят за этой игрой",
+      "    steam watch help                                    - показать эту страницу справки",
       "",
-      "Examples of using steam watch add:",
-      "   steam watch add pm 20% global offensive   -  will pm you any time CS:GO goes on sale for 20% or more",
-      "   steam watch add message 30% rocket league -  will send a message in this channel any time rocket league goes on sale for 30% or more",
-      "   steam watch add mention 10% The Forest    -  will mention you in this channel any time the forest goes on sale for 10% or more"
+      "Примеры использования команды steam watch add:",
+      "   steam watch add pm 20% global offensive   -  уведомляет в ЛС о скидке в 20% и более на CS:GO",
+      "   steam watch add message 30% rocket league -  уведомляет сообщением в текущий канал о скидке в 30% и более на Rocket League",
+      "   steam watch add mention 10% The Forest    -  уведомляет с упоминанием в текущий канал о скидке в 10% и более на The Forest"
     ],
-    "watch_removed": "Removed watcher with ID %s",
+    "watch_removed": "Удалено отслеживание с ID %s",
     "watch_get": [
-      "         ID: %s",
-      "       Game: %s",
-      "    Percent: %s",
-      "   Location: %s",
-      "Location ID: %s"
+      "               ID: %s",
+      "             Игра: %s",
+      "           Скидка: %s",
+      "Место уведомления: %s",
+      "   ID уведомления: %s"
     ],
-    "watch_find": "You have the following watchers for %s\n  %s",
-    "watch_list": "You own the following watchers:\n  %s",
-    "watch_premium": "You must be a premium user to use this command, type 'steam premium' to find out more!"
+    "watch_find": "Наблюдатели отслеживающие игру %s\n  %s",
+    "watch_list": "Активные отслеживающие наблюдатели:\n  %s",
+    "watch_premium": "Вы должны быть премиум пользователем для использования этой команды, введите 'steam premium', чтоб узнать больше!"
   },
 
   "errors": {
@@ -237,21 +240,21 @@
     "country_unsupported": "Неизвестный код страны, зайдите на https://gist.githubusercontent.com/keeguon/2310008/raw/bdc2ce1c1e3f28f9cab5b4393c7549f38361be4e/countries.json для просмотра списка кодов доступных стран",
     "language": "Язык %s не доступен, доступные языки: %s",
     "prefix": "Неправильно указан префикс, должен быть указан 'server' либо 'channel'",
-    "perm_dm": "Cannot set permissions in a private channel!",
-    "perm_destination": "destination for permission must be 'server' or 'channel'",
-    "perm_action": "action for permissin must be 'add', 'remove', 'get' or 'clear'",
-    "perm_invalid": "The following were invalid permissions: \n%s",
-    "perm_ignored": "The following permissions were ignored as they are already required: \n%s",
-    "perm_ignored_removed": "The following permissions were ignored as they aren't required: \n%s",
-    "no_roles": "No roles found matching %s",
-    "watch_locationtype": "Invalid location type, must be one of 'pm', 'mention' or 'message'",
-    "watch_percent": "Percent must be a number",
-    "watch_invalid_percent": "Percent must be greater than 0",
-    "watch_invalid_game": "Couldn't find a game matching %s",
-    "watch_cap": "You have hit the cap of watchers (You can't have more than %s watchers), please remove some before adding more",
-    "watch_exists": "A watcher for this game already exists in this channel, please remove it first if you want to add a different one",
-    "watch_noid": "Couldn't find a watcher with id %s",
-    "watch_find": "You don't have any watchers for %s"
+    "perm_dm": "Нельзя указывать права в личных сообщениях!",
+    "perm_destination": "Аргументом места уведомления для прав нужно указать 'server' или 'channel'",
+    "perm_action": "Аргументом команды для прав нужно указать 'add', 'remove', 'get' или 'clear'",
+    "perm_invalid": "Следующие права указаны неверно: \n%s",
+    "perm_ignored": "Следующие права проигнорированы, потому что уже установлены: \n%s",
+    "perm_ignored_removed": "Следующие права проигнорированы, потому что уже сняты: \n%s",
+    "no_roles": "Ролей %s не найдено",
+    "watch_locationtype": "Место уведомления указано неправильно, должно быть 'pm', 'mention' или 'message'",
+    "watch_percent": "Значение скидки должно быть числом",
+    "watch_invalid_percent": "Значение скидки должно быть больше ноля",
+    "watch_invalid_game": "Не могу найти игру по запросу %s",
+    "watch_cap": "Вы достигли максимума количества отслеживаний (Вы не можете отслеживать более %s игр), удалите их прежде чем добавить новые.",
+    "watch_exists": "Отслеживание скидки для этой игры уже есть в текущем канале. Пожалуйста удалите его прежде чем добавить новое.",
+    "watch_noid": "Невозможно найти отслеживание с ID %s",
+    "watch_find": "У вас нет отслеживаний для %s"
   },
 
   "exceptions": {
