fix spelling mistakes in german translation

--- a/languages/german.json
+++ b/languages/german.json
@@ -3,7 +3,7 @@
     "game": "Warte weitere %t Sekunden vor einer neuen Suche (%cd Sekunden Abklingzeit)",
     "games": "Warte weitere %t Sekunden vor diesem Befehl (%cd Sekunden Abklingzeit)",
     "top": "Warte weitere %t Sekunden um die Top Spiele erneut aufzurufen (%cd Sekunden Abklingzeit)",
-    "new": "Warte weitere %t Sekunden um die neuen Spiele erneut aufzurufen (%cd Sekunden Abklingzeit)",
+    "new": "Warte weitere %t Sekunden um die Neuerscheinungen erneut aufzurufen (%cd Sekunden Abklingzeit)",
     "upcoming": "Warte weitere %t Sekunden um die bald erscheinenden Spiele erneut aufzurufen (%cd Sekunden Abklingzeit)",
     "specials": "Warte weitere %t Sekunden um die beliebtesten Angebote erneut aufzurufen (%cd Sekunden Abklingzeit)",
     "user": "Warte weitere %t Sekunden um erneut nach einem Nutzer zu suchen (%cd Sekunden Abklingzeit)",
@@ -16,7 +16,7 @@
     "userdata": "Warte weitere %t Sekunden um Nutzerdaten erneut aufzurufen (%cd Sekunden Abklingzeit)",
     "help": "Warte weitere %t Sekunden um erneut Hilfe zu erhalten (%cd Sekunden Abklingzeit)",
     "info": "Warte weitere %t Sekunden um erneut Info zu erhalten (%cd Sekunden Abklingzeit)",
-    "stats": "Warte weitere %t Sekunden um erneut Info zu erhalten (%cd Sekunden Abklingzeit)",
+    "stats": "Warte weitere %t Sekunden um erneut Statistiken zu erhalten (%cd Sekunden Abklingzeit)",
     "item": "Warte weitere %t Sekunden um erneut nach einem Gegenstand zu suchen (%cd Sekunden Abklingzeit)",
     "screenshot": "Warte weitere %t Sekunden um erneut nach einem Screenshot zu suchen (%cd Sekunden Abklingzeit)",
     "achiev": "Warte weitere %t Sekunden um deine Errungenschaften erneut zu sehen (%cd Sekunden Abklingzeit)",
@@ -63,7 +63,7 @@
        "           Level: %s"
     ],
     "library": "Top 10 Spiele von %s (Insgesamt %s Spiele):",
-    "removed": "`%s` von `%s` Spielen in %ss Bibliothek wurden von Steam entfernt (%s wurden insgesamt entfernt)",
+    "removed": "`%s` von `%s` Spielen in %ss Bibliothek wurden von Steam entfernt (%s wurden insgesamt von Steam entfernt)",
     "playtime": "%s hat %s in %s",
     "playtime_start": "%s Stunden Spielzeit",
     "playtime_end": " (%s Stunden in den letzten 2 Wochen)",
@@ -79,11 +79,11 @@
       "   steam invite                 - lade SteamBot auf deinen Server ein",
       "   steam info                   - zeigt Informationen über SteamBot an",
       "   steam stats                  - zeigt einige Statistiken über SteamBot an",
-      "   steam clean [Reichweite]     - entfert alle von SteamBots Nachrichten innerhalb der letzten 'Reichweite' Nachrichten",
+      "   steam clean [Reichweite]     - entfert alle Nachrichten SteamBots innerhalb der letzten 'Reichweite' Nachrichten",
       "   steam prefix                 - zeigt das Präfix für diesen Channel",
       "   steam prefix [server|channel] \"prefix\"   - setzt das Präfix für diesen Server oder Channel, z.B \"steam prefix channel !\" bedeutet \"!user [user]\" anstelle von \"steam user [user]\"",
       "   steam perm help              - erhalte Informationen über richtiges Erstellen von Rechten",
-      "   steam convert [Betrag] [Währung] [Währung] - Rechnet eine Währung in die andere um",
+      "   steam convert [Betrag] [Währung] [Währung] - Rechnet eine Währung in eine andere um",
       "",
       "```",
       "Für detailliertere Hilfe besuche unsere Website: http://steambot.site/commands",
@@ -113,12 +113,12 @@
       "   steam popular                - erhalte eine Liste der beliebtesten Spiele nach Spielerzahlen",
       "   steam userdata               - zeige Daten über die Anzahl gerade angemeldeter Nutzer",
       "   steam removed [Nutzer]       - erhalte die Anzahl von Spielen aus einer Bibliothek, die von Steam entfert wurden (Danke an @TheAnthonyNL)",
-      "   steam me [Name]              - lege deinen standard Nutzernamen fest (Du musst für andere Befehle nicht mehr deinen Namen eingeben)",
+      "   steam me [Name]              - lege deinen Standardnutzernamen fest (Du musst für andere Befehle nicht mehr deinen Namen eingeben)",
       "   steam name [user|mention]    - überprüfe den Nutzernamen eines Nutzers",
-      "   steam language [Sprache]     - lege deine Sprache für Steamnachrichten fest",
-      "   steam server_language [Sprache]   - lege die standard Sprache für deinen Server fest",
+      "   steam language [Sprache]     - lege die Sprache für SteamBots Nachrichten fest",
+      "   steam server_language [Sprache]   - lege die Standardsprache für deinen Server fest",
       "   steam country [Ländercode]   - lege das Land für den Shop fest (Ländercodes sind zweistellig wie DE, US or GB)",
-      "   steam currency [Währung] [Symbol] - lege die standard Währung für den Markt fest (Währung ist das Kürzel wie EUR oder USD, Symbol wie € oder $)",
+      "   steam currency [Währung] [Symbol] - lege die Standardwährung für den Markt fest (Währung ist das Kürzel wie EUR oder USD, Symbol wie € oder $)",
       "",
       "```",
       "für detailliertere Hilfe besuche unsere Website: http://steambot.site/commands"
@@ -130,13 +130,13 @@
       "tippe 'steam help' für eine Liste aller Befehle,",
       "oder 'steam invite' um diesen Bot auf deinen Server einzuladen",
       "",
-      "SteamBot wurde mit Discord.Py und einer Kombination aus Steam WebAPI und BeautifulSoup4 gemacht",
+      "SteamBot wurde in Python geschrieben und nutzt discord.py, die Steam WebAPI und BeautifulSoup4.",
       "SteamBot ist auf %s Servern und und lief für %s, %s Befehle wurden seit dem letzten Neustart genutzt",
-      "Dieser Server ist in shard %s (diese shard ist mit %s Servern verbunden)",
+      "Dieser Server ist auf Shard %s (dieser Shard ist mit %s Servern verbunden)",
       "```",
       "Für weitere Informationen besuche bitte unsere Website: http://steambot.site/",
       "",
-      "Wenn Du die Entwicklung von SteamBot fördern willst, helfen die Bereitstellung zu finanzieren und Premium Nutzer werden willst, dann spende bitte mit diesem Link:",
+      "Wenn Du die Entwicklung von SteamBot fördern willst, hilf bei der Bereitstellung indem du Premium Nutzer wirst. Spenden kannst du unter diesem Link:",
       "%s"
     ],
     "premium": [
@@ -146,7 +146,7 @@
       "  - weitere künftige Premium Funktionen, schlage welche vor!",
       "",
       "Premium Funktionen sind Funktionen, die mein Bot nicht für alle Nutzer handhaben könnte",
-      "Um Premium Nutzer zu werden spende einfach monatlich mindestens 1$ in unseren Patreon:",
+      "Um Premium Nutzer zu werden spende einfach monatlich mindestens 1$ an unseren Patreon:",
       "```",
       "https://www.patreon.com/billyoyo"
     ],
@@ -198,7 +198,7 @@
     "invite": "Nutze diesen Link um mich zu deinem Server einzuladen:",
     "me": "Dein Steam Nutzername ist jetzt ",
     "name": ["s Nutzername ist jetzt", "Dein Steam Nutzername ist jetzt"],
-    "currency": "Deine standard Währung wurde von %s in (%s, %s) geändert",
+    "currency": "Deine Standardwährung wurde von %s in (%s, %s) geändert",
     "country": "Dein Land wurde von %s in %s geändert",
     "feedback": "Feedback gesendet!",
     "language": "Deine Sprache ist jetzt %s",
@@ -217,15 +217,15 @@
       "Befehle für Wachkrähen:",
       "    steam watch add pm|mention|message [Prozent] [Spiel] - Platziert eine Wachkrähe für ein Spiel in diesem Channel (oder in deinem Privatchat)",
       "    steam watch remove [Krähen-ID]                       - enfernt eine Wachkrähe",
-      "    steam watch get [Krähen-ID]                          - zeigt Inormationen über eine bestimmte deiner Wachkrähen",
+      "    steam watch get [Krähen-ID]                          - zeigt Informationen über eine bestimmte deiner Wachkrähen",
       "    steam watch list                                     - listet alle deine Wachkrähen auf",
       "    steam watch find [Spiel]                             - findet die IDs aller deiner Wachkrähen, die auf dieses Spiel aufpassen",
       "    steam watch help                                     - zeigt diese Seite",
       "",
       "Beispiele zur Benutzung von steam watch add:",
       "   steam watch add pm 20% global offensive   -  wird Dir eine Nachricht schicken immer wenn CS:GO um mindestens 20% reduziert ist",
-      "   steam watch add message 30% rocket league -  wird immer wenn rocket league um mindestens 30% reduziert ist eine Nachricht in diesem Channel senden",
-      "   steam watch add mention 10% The Forest    -  wird Dich immer wenn the forest um mindestens 10% reduziert ist in diesem Channel benachrichtigen"
+      "   steam watch add message 30% rocket league -  wird immer wenn Rocket League um mindestens 30% reduziert ist eine Nachricht in diesem Channel senden",
+      "   steam watch add mention 10% the forest    -  wird Dich immer wenn The Forest um mindestens 10% reduziert ist in diesem Channel benachrichtigen"
     ],
     "watch_removed": "Wachkrähe mit ID %s wurde entfernt",
     "watch_get": [
@@ -276,7 +276,7 @@
     "watch_percent": "Prozent muss eine Zahl sein",
     "watch_invalid_percent": "Prozent muss größer als 0 sein",
     "watch_invalid_game": "Konnte kein Spiel passend zu %s finden",
-    "watch_cap": "Du hast das Maximum von Wachkrähen erreicht (Du kannst nicht mehr als %s haben), bitte entferne welche bovor du neue hinzufügst",
+    "watch_cap": "Du hast das Maximum an Wachkrähen erreicht (Du kannst nicht mehr als %s haben), bitte entferne welche bevor du neue hinzufügst",
     "watch_exists": "In diesem Channel wacht bereits eine Krähe über dieses Spiel, bitte entferne sie zuerst wenn du eine andere erstellen willst",
     "watch_noid": "Konnte keine Wachkrähe mit der ID %s finden",
     "watch_find": "Du hast keine Wachkrähen für %s",
@@ -289,7 +289,7 @@
     "banned": "Du oder dieser Channel sind davon ausgeschlossen den `%s` Befehl zu nutzen!",
     "cmd_permission": "Du hast nicht die Rechte den `%s` Befehl in diesem Channel zu nutzen!",
     "permission": "SteamBot fehlen die Rechte diesen Befehl zu nutzen!",
-    "language": "SteamBot language error, Programmcode ist defekt oder unvollständig. Bitte benachrichtige uns mit `steam feedback`",
+    "language": "SteamBot Sprachfehler, Programmcode ist defekt oder unvollständig. Bitte benachrichtige uns mit `steam feedback`",
     "other": "Etwas ist schiefgelaufen, stelle sicher, ob du den Befehl richtig verwendet hast! (Wenn du denkst, dass du auf einen Bug gestoßen bist nutze bitte `steam feedback`)"
   }
 }
